--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,12 +60,13 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+  fonts:
+    - family: MadeTommy
+      fonts:
+        - asset: assets/fonts/MadeTommy_Light.otf
+          weight: 200
+        - asset: assets/fonts/MadeTommy_Medium.otf
+          weight: 600
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
