--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,10 +20,10 @@ dependencies:
   cloud_firestore: ^3.1.0
   http: ^0.13.4
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_speed_dial: ^5.0.0+1
+  firebase_auth: ^3.3.5
+  provider: ^5.0.0
 
 dev_dependencies:
   flutter_test:
